<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>br.org.fepb</groupId>
	<artifactId>electra</artifactId>
	<packaging>war</packaging>
	<version>0.3-SNAPSHOT</version>
	<name>Electra (Gestao DIJ - FEPB)</name>
	<url>http://maven.apache.org</url>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<tomcat.version>7.0.59</tomcat.version>
		<log4j.version>2.1</log4j.version>
		<spring.version>4.3.4.RELEASE</spring.version>
		<springSecurity.version>4.0.1.RELEASE</springSecurity.version> <!-- 5.0.1.RELEASE -->
		<servlet3.version>3.0.1</servlet3.version>
		<jackson.version>2.7.7</jackson.version>
		<jackson.annotations.version>2.7.0</jackson.annotations.version>
		<jackson.datatype.jsr310.version>2.6.1</jackson.datatype.jsr310.version>
		<spring.data.rest.version>2.2.2.RELEASE</spring.data.rest.version>
		<spring.data.version>1.7.2.RELEASE</spring.data.version>
		<hibernate.version>4.3.8.Final</hibernate.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>

		<appengine.app.version>1</appengine.app.version>
		<appengine.target.version>1.9.54</appengine.target.version>
		<appengine-maven-plugin-version>1.3.1</appengine-maven-plugin-version>
	</properties>

	<pluginRepositories>
		<pluginRepository>
			<id>bees-plugins-snapshots</id>
			<url>http://repository-cloudbees.forge.cloudbees.com/public-snapshot/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	<repositories>
		<repository>
			<id>prime-repo</id>
			<name>PrimeFaces Maven Repository</name>
			<url>http://repository.primefaces.org</url>
			<layout>default</layout>
		</repository>
		<repository>
			<id>repository.springframework.maven.release</id>
			<name>Spring Framework Maven Release Repository</name>
			<url>http://maven.springframework.org/release</url>
		</repository>
		<repository>
			<id>jboss-public-repository-group</id>
			<name>JBoss Public Maven Repository Group</name>
			<url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</repository>
	</repositories>
	<dependencies>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
		</dependency>

	<!--  dependency>
		<groupId>javax</groupId>
		<artifactId>javaee-web-api</artifactId>
		<version>7.0</version>
		<scope>provided</scope>
	</dependency-->

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.21</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>org.primefaces</groupId>
			<artifactId>primefaces</artifactId>
			<version>6.0</version>
		</dependency>
		<!--  dependency>
    		<groupId>org.primefaces.extensions</groupId>
    		<artifactId>primefaces-extensions</artifactId>
    		<version>6.0.0</version>
		</dependency-->
		<dependency>
			<groupId>org.primefaces.themes</groupId>
			<artifactId>cupertino</artifactId>
			<version>1.0.8</version>
		</dependency>
		<dependency>
			<groupId>org.primefaces.themes</groupId>
			<artifactId>delta</artifactId>
			<version>1.0.10</version>
		</dependency>
		<dependency>
			<groupId>org.primefaces.extensions</groupId>
			<artifactId>all-themes</artifactId>
			<version>1.0.8</version>
			<type>pom</type>
		</dependency>

		<!-- Spring -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>springloaded</artifactId>
			<version>1.2.8.RELEASE</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${spring.version}</version>
        </dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
    		<groupId>org.springframework</groupId>
    		<artifactId>spring-aspects</artifactId>
    		<version>${spring.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.springframework.data</groupId>
		    <artifactId>spring-data-jpa</artifactId>
		    <version>1.10.5.RELEASE</version>
		</dependency>
		<!-- Spring Security -->
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
			<version>${springSecurity.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
			<version>${springSecurity.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
			<version>${springSecurity.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-taglibs</artifactId>
			<version>${springSecurity.version}</version>
		</dependency>



		<!-- Hibernate -->
		<!-- Always use the Hibernate version from the Spring-ORM dependencies -->
		<!-- -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>5.2.5.Final</version>
		</dependency>
		
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>5.1.2.Final</version>
			<scope>compile</scope>
		</dependency>
		
		
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>4.3.6.Final</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.25</version>
		</dependency>

		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>javax.faces</artifactId>
			<version>2.2.14</version>
		</dependency>

		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3.2</version>
		</dependency>

		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.3.4</version>
		</dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.8.5</version>
        </dependency>
        
        	<dependency>
		    <groupId>org.apache.myfaces.tomahawk</groupId>
		    <artifactId>tomahawk</artifactId>
		    <version>1.1.14</version>
		    <scope>compile</scope>
		</dependency>

		<!-- Compile/runtime dependencies (app google engine)-->
		<dependency>
			<groupId>com.google.appengine</groupId>
			<artifactId>appengine-api-1.0-sdk</artifactId>
			<version>${appengine.target.version}</version>
		</dependency>
		<dependency>
			<groupId>jstl</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>

		<!-- Test Dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.10.19</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.appengine</groupId>
			<artifactId>appengine-testing</artifactId>
			<version>${appengine.target.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.appengine</groupId>
			<artifactId>appengine-api-stubs</artifactId>
			<version>${appengine.target.version}</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<finalName>electra</finalName>
		<outputDirectory>target/${project.artifactId}/WEB-INF/classes</outputDirectory>

		<plugins>
		<plugin>
				<!-- Execute como tomcat7:run-war -->
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>2.2</version>
				<configuration>
					<!-- contextFile>config/tomcat.xml</contextFile-->
					<path>/electra</path>
					<!--port>8080</port-->
					<port>80</port> <!-- PRODUCAO-->
					<systemProperties>
						<JAVA_OPTS>-Xms512m -Xmx1024m -XX:MaxPermSize=256m</JAVA_OPTS>
  					</systemProperties>
				</configuration>
				<dependencies>
				<dependency>
    				<groupId>mysql</groupId>
    				<artifactId>mysql-connector-java</artifactId>
    				<version>6.0.6</version>
				</dependency>
					<dependency>
						<groupId>org.apache.logging.log4j</groupId>
						<artifactId>log4j-core</artifactId>
						<version>${log4j.version}</version>
					</dependency>
					<dependency>
						<groupId>org.apache.logging.log4j</groupId>
						<artifactId>log4j-web</artifactId>
						<version>${log4j.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>9.3.13.M0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<archiveClasses>true</archiveClasses>
					<webResources>
						<!-- in order to interpolate version from pom into appengine-web.xml -->
						<resource>
							<directory>${basedir}/src/main/webapp/WEB-INF</directory>
							<filtering>true</filtering>
							<targetPath>WEB-INF</targetPath>
						</resource>
					</webResources>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>appengine-maven-plugin</artifactId>
				<version>${appengine-maven-plugin-version}</version>
			</plugin>
		</plugins>

	</build>

	<profiles>
	<!--profile>
		<id>local.rebuildDB</id>
		<properties>
			<sql.directory>src/main/resources/META-INF/sql/dados-iniciais-masterdata.sql</sql.directory>
		</properties>
		<build>
			<plugins>
				<plugin>
					<groupId>org.zcore.maven</groupId>
					<artifactId>merge-maven-plugin</artifactId>
					<version>0.0.3</version>
					<executions>
						<execution>
							<goals>
								<goal>merge</goal>
							</goals>
							<phase>compile</phase>
						</execution>
					</executions>
					<configuration>
						<mergers>
							<merger>
								<target>src/main/resources/META-INF/sql/dados-iniciais-masterdata.sql</target>
								<sources>
									<source>src/main/resources/META-INF/sql/dados-iniciais-essencial.sql</source>
									<source>src/main/resources/META-INF/sql/dados-iniciais-regioes-ibge.sql</source>
									<source>src/main/resources/META-INF/sql/dados-iniciais-estados-ibge.sql</source>
									<source>src/main/resources/META-INF/sql/dados-iniciais-municipios-ibge.sql</source>
									<source>src/main/resources/META-INF/sql/dados-iniciais-bairros-ibge.sql</source>
								</sources>
							</merger>
						</mergers>
					</configuration>
				</plugin>
			</plugins>
		</build>
	</profile-->
	</profiles>

</project>
